[gd_scene load_steps=2 format=3 uid="uid://b3fmpcjygikuo"]

[ext_resource type="Script" path="res://Scripts/GUI/HUD.gd" id="1_o8b4o"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8b4o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WaterfillLabel" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AngleLabel" type="Label" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CollisionLabel" type="Label" parent="VBoxContainer/MarginContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VelocityLabel" type="Label" parent="VBoxContainer/MarginContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 50

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="VBoxContainer/MarginContainer6"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
